update send slack

--- a/mysite/polls/templates/polls/index.html
+++ b/mysite/polls/templates/polls/index.html
@@ -11,7 +11,7 @@
         <div>Choose type of Trend:
             {{ form.GG_Trend_Type }}
             </div>
-        <div>Keyword List:
+        <div>Keyword:
             {{ form.Keyword_List }}
             </div>
 
