update send slack

--- a/mysite/polls/templates/polls/index.html
+++ b/mysite/polls/templates/polls/index.html
@@ -11,11 +11,18 @@
         <div>Choose type of Trend:
             {{ form.GG_Trend_Type }}
             </div>
-        <div>Keyword:
+        <div>Keyword find:
             {{ form.Keyword_List }}
             </div>
 
     <button type="submit">Find</button>
+
+        <h3>Note</h3>
+        <p>Related Queries, Related Topics: 1 keyword only</p>
+        <p>interest over time, gg keyword suggestions, Interest by Region: Maximum 5 keyword, separated by commas (,)</p>
+        <p>Google Hot Trends data: Country name (lowercase)</p>
+        <p>Google Hot Trends today search: US (default)</p>
+        <p>Google Top Charts: GLOBAL (default)</p>
 
     </form>
 </body>
